MGRAPPS-82 - Upgrade module to SpringBoot4.0 and Spring7.0 (#244)