@@ -1,15 +1,14 @@
 package org.folio.am.integration.mte;
 
-import static java.util.stream.Collectors.toList;
 import static org.apache.commons.collections4.CollectionUtils.isNotEmpty;
 
-import feign.FeignException;
 import java.util.Collections;
 import java.util.List;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
 import org.folio.am.exception.ServiceException;
 import org.folio.am.integration.mte.model.Entitlement;
+import org.springframework.web.client.RestClientException;
 
 @Log4j2
 @RequiredArgsConstructor
@@ -26,11 +25,11 @@ public class EntitlementService {
       if (isNotEmpty(result.getRecords())) {
         return result.getRecords()
           .stream().map(Entitlement::getTenantId)
-          .collect(toList());
+          .toList();
       } else {
         return Collections.emptyList();
       }
-    } catch (FeignException cause) {
+    } catch (RestClientException cause) {
       throw new ServiceException("mgr-tenant-entitlements is not available", cause);
     }
   }
